--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -2,16 +2,24 @@
   z-index: 3;
   position: absolute;
   width: 394px;
-  height: 394px;
+  height: 0;
   top: 115px;
   background: #F2F0F1;
   border-bottom: 10px solid #FF8A00;
-  transform: translate(-600px, -600px);
-  transition: .5s;
+  opacity: 0;
+  transition: 0.2s;
+  &__list {
+    display: none;
+  }
 }
 
 .burger__active {
-  transform: translate(0, 0);
+  height: 394px;
+  opacity: 1;
+  .burger__list {
+    display: block;
+    opacity: 1;
+  }
 }
 
 .burger__list {
@@ -31,7 +39,7 @@
   left: 0;
   top: 2px;
   transform: translateY(-100%);
-  border-bottom: 3px solid #F2F0F1;;
+  border-bottom: 3px solid #F2F0F1;
 }
 
 .burger__item {
