--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -34,6 +34,9 @@
 
 @media (max-width: 768px) {
   .slider {
+    &__item {
+      height: 410px;
+    }
     &__left {
       width: 26px;
       height: 26px;
